--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="Dakirby309-Windows-8-Metro-Apps-Calculator-Metro.ico">
+  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
   <title>Calculator</title>
 </head>
